src/style.css
.outer-box {
    padding: 30px;
    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
    background: linear-gradient(45deg, #c766ff, #c766ffde);
}

.header-bar {
    padding: 5px;
}

.drum-machine-box {
    padding: 20px;
    border-radius: 10px;
    background-color: #ffffff27;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.drum-machine-box button {
    background-color: #ffffff65;
}

.drum-machine-box button.toggle-active {
    background-color: #ffffff;
    box-shadow: 0 0 10px #ffffff;
}

.drum-machine-box.compact button {
    min-width: 10px;
    min-height: 10px;
    padding: 0;
}

.bpm-spin-button {
    padding: 5px;
}

.drum-machine-box button:hover {
    background-color: #ffffffb0;
}

.drum-machine-box button:checked {
    background-color: #ffffff;
}

.bottom-wrapper {
    background: #c766ffaf;
    padding: 10px;
    width: 100%;
}

